# MergeSAT

./: .gitignore  Cargo.toml  README.md  random_in.cnf  random_out.cnf
.devcontainer/: devcontainer.json
.github/workflows/: benchmark.yml  coverage.yml  release.yml  tests.yml
.hooks/: commit-msg
pysrc/: instance.py  main.py  solver_types.py  types.py
src/: certificate.rs  clause.rs  instance.rs  lib.rs  types.rs
